# junit-parser

./: junit-parser.cabal
app/: Main.hs
example/: result.xml
src/: Lib.hs
src/JUnit/: Parser.hs
