name:                junit-parser
version:             0.0.0.1
synopsis:            Library for parsing JUnit XML results
description:         Please see README.md
homepage:            https://github.com/wayofthepie/junit-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen O'Brien
maintainer:          wayofthepie@gmail.com
copyright:           2015 Stephen O'Brien
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lib
    , JUnit.Parser

  build-depends:
    base >= 4.7 && < 5
    , filepath
    , time
    , text
    , xml-conduit
  default-language:    Haskell2010

test-suite junit-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , junit-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wayofthepie/junit-parser
